# template-project

./: CHANGELOG.md  Dockerfile.dev  Makefile  changelog.md  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
config/: pytest.ini  tox.ini
templateproject/: __init__.py
templateproject/calculator/: __init__.py  math.py
tests/: main_test.py
