[tool.poetry]
name = "template_project"
version = "0.2.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
pandas = "2.1.4"
numpy = "1.26.3"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
flake8 = "6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
